2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file): 
	* libnautilus-private/nautilus-icon-container.c (nautilus_icon_container_start_renaming_selected_item):
	Use eel_filename_get_rename_region for both list and icon view to
	get the initial region to select on rename.
	
2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window.h: 
	* src/nautilus-window.c: 
	* src/nautilus-window-menus.c:
	Don't save the location bar enabled prefs when showing it
	temporarily.

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	Keyboard shortcuts for context menu.
	Don't eat CTRL-Space, that means we can't multiple-select.

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* docs/key_mouse_navigation.txt:
	Update keynav docs.
	
	* libnautilus-private/nautilus-icon-private.h:
	* libnautilus-private/nautilus-icon-container.c:
	(button_release_event), (motion_notify_event), (key_press_event),
	(handle_icon_button_press), (has_multiple_selection),
	(has_selection):
	Don't do context menu on middle button.
	Shift-F10 gives directory context menu if no selection
	Change Ctrl-F10 to Shift-F9 to pop up directory context menu. Ctrl-F10 was
	conflicting with Toolbar keynav.
	
	* src/nautilus-shell-ui.xml:
	Remove Escape accelerator for escape. It was colliding with various
	other uses of escape all over. Need to rethink this.

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (handle_icon_button_press):
	Re-Fix Home/End.
	Make Ctrl-space create a keyboar focus if none exists instead of activating
	the selection.

	* docs/Makefile.am:
	* docs/key_mouse_navigation.txt:
	Add some key/mouse docs for views.

2003-03-26  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c: (activate_selected_items),